--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-﻿pandas==2.2.3
-numpy==2.2.2
+﻿python-dateutil==2.9.0.post0
+pandas==2.2.2
+numpy==2.0.1
+matplotlib==3.8.4
 requests==2.32.3
-python-dateutil==2.9.0.post0
-pytest==8.3.3
+pytest==8.2.0
+
